2016-06-21  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 1.1.0 released
        =========================

        Add GWcsSIN projection class (#1798)
        CTA cube response no longer selects on RoI and energies (#1789)
        Add weights to CTA event cube and event bin (#1789)
        Remove GCTACubeExposure, GCTACubePsf and GCTACubeBackground elogmeans() methods
        GCTACubeExposure, GCTACubePsf and GCTACubeBackground use energy values (#1788)
        GSkyMap::save() now overwrites files (#1787)
        Add GCTAPsfTable class (#1786)
        Use std::vector for naxes argument in GFitsImage (#1779)
        GCTACubePsf and GCTACubeEdisp now save 4D images
        Change interpolation scheme in GCTABackground3D
        Add GCsv::append() method (#1773)
        Add GTestSuite::test_value() string method (#1772)
        Add component setting methods to GModelSky (#1770)
        Add GApplication::logFileClose() method
        Add GModel::read_attributes() and write_attributes() private methods (#1765)
        Also write test reports in case of an exception (#1746)
        GCaldb::filename() method now returns GFilename (#1745)
        Add GCTAObservation filename constructor (#1744)
        Add gammalib::number() function (#1743)
        Add GSkyMap::shape() and ndim() methods (#1733)
        Add GEnergy division operator
        Use rejection method in GModelSpatialDiffuseMap::mc() (#1725)
        Add GObservations::nobserved() method (#1723)
        Use rejection method in GCTABackground3D::mc() (#1722)
        Use rejection method in GModelSpatialDiffuseCube::mc() (#1722)
        Add energy dispersion cube for stacked analysis (#1721)
        Make GFilename::is_fits thread safe (#1717)
        Revise GTime operators (#1714)
        Add GSkyMap::publish() method to publish map on VO Hub (#1710)
        Add GVOClient::publish() method to publish a FITS HDU (#1710)
        Remove GCTAOnOffObservations class (#1669)